--- a/examples/subcycles/example.ipynb
+++ b/examples/subcycles/example.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76a9ad8e-f5cb-4fff-8805-c9ba39bc6fa7",
-   "metadata": {},
+   "id": "fe0a7619-00bf-4cde-9cf7-7bd08175557f",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Import modules"
+    "### Example: Data with two distinct sub-cycles within one pump-probe cycle<br>\n",
+    "### Components: Two Gaussian Lorenzian Product (GLP) peaks +offset +Shirley background<br>\n",
+    "### Technique: X-ray Photoelectron Spectroscopy (XPS)"
    ]
   },
   {
@@ -19,25 +23,15 @@
    "source": [
     "import os # to get current working directory\n",
     "import numpy as np # to read example data\n",
-    "import trspecfit as trsfit # main module"
+    "import trspecfit # main module"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fe0a7619-00bf-4cde-9cf7-7bd08175557f",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Example: Two peaks with dependent parameters (+offset +background)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a700a7a-e5dd-40ec-a8c1-83ba8b5c74c9",
+   "id": "d16fc496",
    "metadata": {},
    "source": [
-    "## Create a project (defines axis labels among other parameters)"
+    "Load data"
    ]
   },
   {
@@ -49,18 +43,9 @@
    },
    "outputs": [],
    "source": [
+    "# create project\n",
     "project_folder = os.getcwd() # path to data folder(s)\n",
-    "P = trsfit.Project(path=project_folder)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "978f9366-1867-4101-a490-cf727e47aa2d",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Create a file (the fit models will be associated with this)"
+    "P = trspecfit.Project(path=project_folder)"
    ]
   },
   {
@@ -72,24 +57,23 @@
    },
    "outputs": [],
    "source": [
+    "# create a file (the fit models will be associated with this File object)\n",
     "file_folder = \"data\" # define where data of our file is located (in project folder)\n",
-    "# load data into a trsfit.File\n",
-    "F = trsfit.File(P, \n",
-    "                path = file_folder,\n",
-    "                data = np.loadtxt(P.path / file_folder / \"data.csv\", delimiter=','),\n",
-    "                energy = np.loadtxt(P.path / file_folder / \"energy.csv\"),\n",
-    "                time = np.loadtxt(P.path / file_folder / \"time.csv\")\n",
-    "               )"
+    "# load data into a trspecfit.File\n",
+    "F = trspecfit.File(P, \n",
+    "                   path = file_folder,\n",
+    "                   data = np.loadtxt(P.path / file_folder / \"data.csv\", delimiter=','),\n",
+    "                   energy = np.loadtxt(P.path / file_folder / \"energy.csv\"),\n",
+    "                   time = np.loadtxt(P.path / file_folder / \"time.csv\")\n",
+    "                   )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65462ff8-d3ef-44cc-8353-0ab154dba557",
-   "metadata": {
-    "tags": []
-   },
+   "id": "d8d7e80a",
+   "metadata": {},
    "source": [
-    "## Set limits (in time and energy) for the fit models"
+    "Set limits (in time and energy) for the fit models"
    ]
   },
   {
@@ -101,7 +85,7 @@
    },
    "outputs": [],
    "source": [
-    "F.set_fit_limits(energy_limits = [91, 81.5],\n",
+    "F.set_fit_limits(energy_limits = [92, 81],\n",
     "                 time_limits = [-1.5, 10])"
    ]
   },
@@ -112,7 +96,7 @@
     "tags": []
    },
    "source": [
-    "## Define the baseline/ ground state/ unbiased portion of the spectrum "
+    "Define the baseline/ ground state/ unbiased portion of the spectrum "
    ]
   },
   {
@@ -145,7 +129,7 @@
    "id": "6779c938-ea3a-489c-a0c2-9403c8c0e87c",
    "metadata": {},
    "source": [
-    "## Load a model for the basline spectrum and fit it"
+    "Load a model for the basline spectrum and fit it"
    ]
   },
   {
@@ -159,7 +143,7 @@
    "source": [
     "model_name_base = \"base\" # select model name\n",
     "\n",
-    "F.load_model(model_yaml = \"models_Au4f.yaml\",\n",
+    "F.load_model(model_yaml = \"models_energy.yaml\",\n",
     "             model_info = [model_name_base,])\n",
     "F.describe_model(model_info=model_name_base, detail=0)"
    ]
@@ -183,7 +167,7 @@
     "tags": []
    },
    "source": [
-    "## Load a model to fit data \"Slice-by-Slice\""
+    "Load a model to fit data \"Slice-by-Slice\" (one time-step at a time)"
    ]
   },
   {
@@ -197,7 +181,7 @@
    "source": [
     "model_name_SbS = \"2D\" # select model name\n",
     "\n",
-    "F.load_model(model_yaml = \"models_Au4f.yaml\",\n",
+    "F.load_model(model_yaml = \"models_energy.yaml\",\n",
     "             model_info = [model_name_SbS,])\n",
     "F.describe_model(model_name_SbS, detail=0)"
    ]
@@ -223,7 +207,7 @@
     "tags": []
    },
    "source": [
-    "## Load a model to perform a global 2D fit"
+    "Load a model to perform a global 2D fit"
    ]
   },
   {
@@ -238,7 +222,7 @@
     "# load energy/spectroscopy model\n",
     "model_name_2D = \"2D\" # select model name\n",
     "F.delete_model(model_name_2D)\n",
-    "F.load_model(model_yaml = \"models_Au4f.yaml\",\n",
+    "F.load_model(model_yaml = \"models_energy.yaml\",\n",
     "             model_info = [model_name_2D,])\n",
     "F.describe_model(model_info=model_name_2D, detail=0)"
    ]
@@ -254,7 +238,7 @@
    "source": [
     "# add time dependence for one or more parameters\n",
     "F.add_time_dependence(model_yaml = \"models_time.yaml\",\n",
-    "                      model_info = [\"IRF\", \"MonoExpNeg\", \"MonoExpPos\"],\n",
+    "                      model_info = [\"ModelNone\", \"MonoExpNeg\", \"MonoExpPos\"],\n",
     "                      par_name = \"GLP_01_x0\",\n",
     "                      frequency = 0.5)\n",
     "print()\n",
@@ -283,27 +267,11 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "931f4c50-9cfe-401c-8d49-20481e43030f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47a595bc-4ecd-4dc6-9049-5c3f03966e84",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.4)",
    "language": "python",
    "name": "python3"
   },
@@ -317,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
