--- a/examples/dependent_parameters/example.ipynb
+++ b/examples/dependent_parameters/example.ipynb
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79dc1c76",
+   "id": "8d56d59d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.4)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
