--- a/examples/simulator/example.ipynb
+++ b/examples/simulator/example.ipynb
@@ -35,9 +35,9 @@
     "project = trspecfit.Project(path=os.getcwd())\n",
     "# create file instance\n",
     "file = trspecfit.File(parent_project=project,\n",
-    "                   energy=np.arange(0, 20, 0.01),\n",
-    "                   time=np.arange(-10, 100, 0.1)\n",
-    "                   )"
+    "                      energy=np.arange(0, 20, 0.01),\n",
+    "                      time=np.arange(-10, 100, 0.1)\n",
+    "                      )"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "# plot 1D spectrum at a specific time index t_ind\n",
-    "file.model_active.plot_1D(t_ind=0, plt_ind=1)"
+    "file.model_active.plot_1D(t_ind=0, plot_ind=True)"
    ]
   },
   {
@@ -139,8 +139,8 @@
     "#     and noise_type ('gaussian' or 'poisson' or 'none')\n",
     "# detection: 'photon_counting'\n",
     "#     provide counts_per_cycle (or count_rate and cycle_time)\n",
-    "#     noise_level is relative to counts_per_cycle\n",
     "#     noise_type is 'poisson' (default) or 'none'\n",
+    "# random seed for reproducibility (set to None for pseudo-random seed)\n",
     "sim = trspecfit.Simulator(model=file.model_active,\n",
     "                          detection='photon_counting',\n",
     "                          counts_per_cycle=None,\n",
@@ -156,8 +156,8 @@
    "outputs": [],
    "source": [
     "# Simulate a 1D dataset at a specific time index\n",
-    "#sim_dat1D = sim.simulate_1D(t_ind=0)\n",
-    "#sim.plot_comparison(t_ind=0, dim=1)"
+    "sim_dat1D = sim.simulate_1D(t_ind=0)\n",
+    "sim.plot_comparison(t_ind=0, dim=1)"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "outputs": [],
    "source": [
     "# Simulate a number (N) of 2D datasets and save in a hdf5 file\n",
-    "[clean_data, noisy_data_list, noise_list] = sim.simulate_N(N=10)\n",
+    "[clean_data, noisy_data_list, noise_list] = sim.simulate_N(N=20)\n",
     "sim.save_data(N_data=noisy_data_list)"
    ]
   },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53bb904a",
+   "id": "92a03b01",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -208,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.12.4)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
