--- a/examples/subcycles/example.ipynb
+++ b/examples/subcycles/example.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "import os # to get current working directory\n",
     "import numpy as np # to read example data\n",
-    "import trspecfit # main module"
+    "import trspecfit # main module\n",
+    "from trspecfit.utils.lmfit import MC # uncertainty estimation"
    ]
   },
   {
@@ -254,10 +255,19 @@
    },
    "outputs": [],
    "source": [
+    "# define uncertainty estimation settings\n",
+    "MC2D=MC(useMC=0,\n",
+    "        steps=5000,\n",
+    "        nwalkers=20,\n",
+    "        thin=1\n",
+    "        )\n",
+    "\n",
     "# perform fit\n",
-    "F.fit_2Dmodel(model_name = model_name_2D,\n",
-    "              fit = 2,\n",
-    "              try_CI = 0)"
+    "F.fit_2Dmodel(model_name=model_name_2D,\n",
+    "              fit=2,\n",
+    "              try_CI=0,\n",
+    "              MCsettings=MC2D\n",
+    "              )"
    ]
   },
   {
