--- a/examples/dependent_parameters/example.ipynb
+++ b/examples/dependent_parameters/example.ipynb
@@ -180,7 +180,7 @@
    },
    "outputs": [],
    "source": [
-    "model_name_SbS = \"2D\" # select model name\n",
+    "model_name_SbS = \"SbS\" # select model name\n",
     "\n",
     "F.load_model(model_yaml = \"models_energy.yaml\",\n",
     "             model_info = [model_name_SbS,])\n",
@@ -220,9 +220,8 @@
    },
    "outputs": [],
    "source": [
-    "# load energy/spectroscopy model\n",
     "model_name_2D = \"2D\" # select model name\n",
-    "F.delete_model(model_name_2D)\n",
+    "\n",
     "F.load_model(model_yaml = \"models_energy.yaml\",\n",
     "             model_info = [model_name_2D,])\n",
     "F.describe_model(model_info=model_name_2D, detail=0)"
