update simulator example

--- a/examples/simulator/example.ipynb
+++ b/examples/simulator/example.ipynb
@@ -192,8 +192,8 @@
    "outputs": [],
    "source": [
     "# If you want to modify the model:\n",
-    "# 1) reset models [execute this cell (free up name associated with current model)]\n",
-    "# 2) Restart the Jupyter Notebook and start from scratch i.e. the top cell\n",
+    "#   reset models [execute this cell (free up name associated with current model)]\n",
+    "#   OR restart the Jupyter Notebook and start from scratch i.e. the top cell\n",
     "file.reset_models()"
    ]
   },
