add notebook for 2 peaks

--- a/examples/subcycles/ml_training_data_gen.ipynb
+++ b/examples/subcycles/ml_training_data_gen.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "add_dynamics",
    "metadata": {},
    "outputs": [
@@ -98,14 +98,14 @@
     "# Add time dependence to peak 1 position\n",
     "file.add_time_dependence(\n",
     "    model_yaml=\"models_time.yaml\",  # from subcycles/\n",
-    "    model_info=['MonoExpNeg'],  # IRF + negative shift\n",
+    "    model_info=['MonoExpNeg'],  # negative shift\n",
     "    par_name=\"GLP_01_x0\"\n",
     ")\n",
     "\n",
     "# Add time dependence to peak 2 position  \n",
     "file.add_time_dependence(\n",
     "    model_yaml=\"models_time.yaml\",\n",
-    "    model_info=['MonoExpPos'],  # IRF + positive shift (linked)\n",
+    "    model_info=['MonoExpPos'],  # positive shift (linked)\n",
     "    par_name=\"GLP_02_x0\"\n",
     ")"
    ]
