--- a/examples/data_generation/ml_training/example.ipynb
+++ b/examples/data_generation/ml_training/example.ipynb
@@ -264,7 +264,7 @@
    "outputs": [],
    "source": [
     "# Generate large training dataset\n",
-    "# WARNING: This will take several minutes!\n",
+    "# WARNING: This can take up to several minutes!\n",
     "sim.simulate_parameter_sweep(\n",
     "    parameter_sweep=sweep_random,\n",
     "    N_realizations=20,\n",
